added center align for hw1

--- a/Homework 1/index.html
+++ b/Homework 1/index.html
@@ -4,26 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>LeverX</title>
 </head>
 <style>
-div {
+.center-align {
+    text-align: center;
+}
+                        
+.text-width{
+    margin: auto;
     width: 800px;
+    text-align: center;
+}
+                        
+a{
+    margin: 30px;
 }
 </style>
 <body>
-    <img width="800" src="./img/leverx.svg">
-    <div>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae tempore explicabo laborum, ut exercitationem, aperiam sed similique illum ullam distinctio alias iste quam qui illo, voluptas deleniti officia repellendus earum.
-        </p>
+    <div class="center-align">
+        <img width="800" src="./img/leverx.svg" />
+    </div>
+    <div class="text-width">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae tempore explicabo laborum, ut exercitationem, aperiam sed similique illum ullam distinctio alias iste quam qui illo, voluptas deleniti officia repellendus earum.
     </div>
     <ul>
         <li>Company</li>
         <li>Country</li>
         <li>City</li>
-        <li>Begin contract</li>
-        <li>End contract</li>
+        <li>Begin of contract</li>
+        <li>End of contract</li>
         <li>Buttons</li>
     </ul>
     <a href="./items.html">items.html</a>
