--- a/Homework 1/items.html
+++ b/Homework 1/items.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Items</title>
+    <title>Customers</title>
 </head>
 <style>
 table, th, td{
-    border: 1px solid black;
+    border: 1px solid;
+    margin: auto;
+}
+
+caption{
+    margin-bottom: 10px;
 }
 </style>
 <body>
     <table>
+        <caption><b>Customers</b></caption>
         <thead>
             <tr>
                 <th>Company</th>
                 <th>Country</th>
                 <th>City</th>
-                <th>Begin contract</th>
-                <th>End contract</th>
+                <th>Begin of contract</th>
+                <th>End of contract</th>
                 <th colspan="2">Buttons</th>
             </tr>
         </thead>
