added center align for hw1

--- a/Homework 1/index.html
+++ b/Homework 1/index.html
@@ -23,7 +23,7 @@ a{
 </style>
 <body>
     <div class="center-align">
-        <img width="800" src="./img/leverx.svg" />
+        <img width="800" src="../img/leverx.svg" />
     </div>
     <div class="text-width">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae tempore explicabo laborum, ut exercitationem, aperiam sed similique illum ullam distinctio alias iste quam qui illo, voluptas deleniti officia repellendus earum.
@@ -36,6 +36,6 @@ a{
         <li>End of contract</li>
         <li>Buttons</li>
     </ul>
-    <a href="./items.html">items.html</a>
+    <a href="../Homework 1/items.html">items.html</a>
 </body>
 </html>
