added center align for hw1

--- a/Homework 1/index.html
+++ b/Homework 1/index.html
@@ -23,7 +23,7 @@ a{
 </style>
 <body>
     <div class="center-align">
-        <img width="800" src="../img/leverx.svg" />
+        <img width="800" src="../Homework 1/img/leverx.svg" />
     </div>
     <div class="text-width">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae tempore explicabo laborum, ut exercitationem, aperiam sed similique illum ullam distinctio alias iste quam qui illo, voluptas deleniti officia repellendus earum.
