edited with beautify

--- a/Homework 1/index.html
+++ b/Homework 1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,26 +8,29 @@
     <title>LeverX</title>
 </head>
 <style>
-.center-align {
-    text-align: center;
-}
-                        
-.text-width{
-    margin: auto;
-    width: 800px;
-    text-align: center;
-}
-                        
-a{
-    margin: 30px;
-}
+    .center-align {
+        text-align: center;
+    }
+
+    .text-width {
+        margin: auto;
+        width: 800px;
+        text-align: center;
+    }
+
+    a {
+        margin: 30px;
+    }
 </style>
+
 <body>
     <div class="center-align">
         <img width="800" src="../Homework 1/img/leverx.svg" />
     </div>
     <div class="text-width">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae tempore explicabo laborum, ut exercitationem, aperiam sed similique illum ullam distinctio alias iste quam qui illo, voluptas deleniti officia repellendus earum.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae tempore explicabo laborum, ut
+        exercitationem, aperiam sed similique illum ullam distinctio alias iste quam qui illo, voluptas deleniti
+        officia repellendus earum.
     </div>
     <ul>
         <li>Company</li>
@@ -38,4 +42,5 @@ a{
     </ul>
     <a href="../Homework 1/items.html">items.html</a>
 </body>
+
 </html>
