Edited project structure

--- a/Homework 1/index.html
+++ b/Homework 1/index.html
@@ -25,7 +25,7 @@
 
 <body>
     <div class="center-align">
-        <img width="800" src="../Homework 1/img/leverx.svg" />
+        <img width="800" src="../Homework 1/Resources/Images/leverx.svg" />
     </div>
     <div class="text-width">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae tempore explicabo laborum, ut
