made 4hw and completed 3hw

--- a/Homework 4/Task 1/index.html
+++ b/Homework 4/Task 1/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HW4 Task1</title>
+    <title>HW4 Task 1</title>
     <link rel="stylesheet" type="text/css" href="../Task 1/styles/styles.css" />
-    <script src="../Task 1/scripts/task1.js"></script>
 </head>
 <body>
-    <div id="container">
-
-    </div>
+    <div id="container"></div>
+    <script src="../Task 1/scripts/task1.js"></script>
 </body>
 </html>
