--- a/Homework 3/Task 3/index.html
+++ b/Homework 3/Task 3/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main-container">
         <div class="dark-box">1</div>
-        <div class="long-box">2</div>
+        <div id="long-box">2</div>
         <div class="dark-box">3</div>
         <div class="light-box">4</div>
         <div class="dark-box">5</div>
