changed hw2 task 1

--- a/Homework 2/Task 1/block.html
+++ b/Homework 2/Task 1/block.html
@@ -10,25 +10,25 @@
 </head>
 
 <body>
-    <div>
-        <div>
-            <div class="row1"></div>
-            <div class="row1"></div>
-        </div>
-        <div>
-            <div class="row2"></div>
-        </div>
-        <div>
-            <div class="row3"></div>
-            <div class="row3"></div>
-            <div class="row3"></div>
-        </div>
-        <div>
-            <div class="row4"></div>
-            <div class="row4"></div>
-            <div class="row4"></div>
-            <div class="row4"></div>
-        </div>
+    <div class="wrapper">
+    <div class="row1">
+        <div class="row1-item"></div>
+        <div class="row1-item"></div>
+    </div>
+    <div class="row2">
+        <div class="row2-item"></div>
+    </div>
+    <div class="row3">
+        <div class="row3-item"></div>
+        <div class="row3-item"></div>
+        <div class="row3-item"></div>
+    </div>
+    <div class="row4">
+        <div class="row4-item"></div>
+        <div class="row4-item"></div>
+        <div class="row4-item"></div>
+        <div class="row4-item"></div>
+    </div>
     </div>
 </body>
 </html>
