added adapt to task 1-2 lect pract and improved hw2

--- a/Lection practice 1/Task 2/index.html
+++ b/Lection practice 1/Task 2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,102 +8,107 @@
     <title>Task 2</title>
     <link rel="stylesheet" type="text/css" href="../Task 2/styles/styles.css" />
 </head>
+
 <body>
-    <div class="senders-container">
-        <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+    <div class="main-container">
+        <div class="senders-container"></div>
+        <div class="messages-container">
+            <div class="sender-message">
+                <div class="message-text-without-image">Hello!</div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="sender-message">
+                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
+                <div class="message-text">How are you?</div>
             </div>
-        </div>
-        <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+            <div class="own-message">
+                <div class="message-text-without-image">Hello!</div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="own-message">
+                <div class="message-text-without-image">I'm ok</div>
             </div>
-        </div>
-        <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+            <div class="own-message">
+                <div class="message-text">And you?</div>
+                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="sender-message">
+                <div class="message-text-without-image">Hello!</div>
             </div>
-        </div>
-        <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+            <div class="sender-message">
+                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
+                <div class="message-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
+                        aliquid explicabo deleniti? Repudiandae illo earum saepe nostrum odit quasi enim velit nulla,
+                        facere, perspiciatis aut tempora quae necessitatibus quia natus. Lorem ipsum dolor sit amet,
+                        consectetur adipisicing elit. Quos magnam fuga enim corporis, debitis saepe optio? Incidunt
+                        inventore libero placeat, expedita ipsa error odit temporibus eveniet iure, soluta esse velit!</div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="own-message">
+                <div class="message-text-without-image">Hello!</div>
             </div>
-        </div>
-        <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+            <div class="own-message">
+                <div class="message-text-without-image">I'm ok</div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="own-message">
+                <div class="message-text">And you?</div>
+                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
             </div>
-        </div>
-                    <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+            <div class="sender-message">
+                <div class="message-text-without-image">Hello!</div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="sender-message">
+                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
+                <div class="message-text">How are you?</div>
             </div>
-        </div>
-        <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+            <div class="own-message">
+                <div class="message-text-without-image">Hello!</div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="own-message">
+                <div class="message-text-without-image">I'm ok</div>
             </div>
-        </div>
-        <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+            <div class="own-message">
+                <div class="message-text">And you?</div>
+                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="sender-message">
+                <div class="message-text-without-image">Hello!</div>
             </div>
-        </div>
-        <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+            <div class="sender-message">
+                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
+                <div class="message-text">How are you?</div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="own-message">
+                <div class="message-text-without-image">Hello!</div>
             </div>
-        </div>
-        <div class="sender">
-            <div class="sender-photo">
-                <img src="../Task 2/images/download.jfif">
+            <div class="own-message">
+                <div class="message-text-without-image">I'm ok</div>
             </div>
-            <div class="sender-name">
-                Katrine
+            <div class="own-message">
+                <div class="message-text">And you?</div>
+                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
+            </div>
+            <div class="sender-message">
+                <div class="message-text-without-image">Hello!</div>
+            </div>
+            <div class="sender-message">
+                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
+                <div class="message-text">How are you?</div>
+            </div>
+            <div class="own-message">
+                <div class="message-text-without-image">Hello!</div>
+            </div>
+            <div class="own-message">
+                <div class="message-text-without-image">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
+                    aliquid explicabo deleniti? Repudiandae illo earum saepe nostrum odit quasi enim velit nulla,
+                    facere, perspiciatis aut tempora quae necessitatibus quia natus. Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit. Quos magnam fuga enim corporis, debitis saepe optio? Incidunt
+                    inventore libero placeat, expedita ipsa error odit temporibus eveniet iure, soluta esse velit!</div>
+            </div>
+            <div class="own-message">
+                <div class="message-text">And you?</div>
+                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
             </div>
         </div>
     </div>
-    <div class="messages-container">
-        <div class="sender-message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime doloribus consequuntur totam. Dolorem quod aut dolore aperiam sint quidem quibusdam ipsa accusantium exercitationem veritatis. Ipsum quasi quisquam doloremque consequuntur itaque.</div>
-        <div class="own-message">sdffds</div>
-        <div class="own-message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi molestias deleniti dignissimos facilis, soluta ullam sapiente repellat explicabo cum quasi? Aperiam quia suscipit, iste autem commodi deleniti officiis itaque nam!</div>
-        <div class="own-message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, consequatur ut. Libero architecto perferendis et veritatis illo quisquam delectus ipsam harum facere id neque animi distinctio, nihil iste totam dignissimos!</div>
-        <div class="sender-message">sdffds</div>
-        <div class="sender-message">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, dolorem sapiente dolorum repellat corrupti ratione voluptas asperiores. Ipsum impedit, adipisci aliquid distinctio delectus modi earum praesentium ducimus expedita tempora voluptas!</div>
-        <div class="sender-message">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime doloribus consequuntur totam. Dolorem quod aut dolore aperiam sint quidem quibusdam ipsa accusantium exercitationem veritatis. Ipsum quasi quisquam doloremque consequuntur itaque.</div>
-        <div class="own-message">sdffds</div>
-        <div class="own-message">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi molestias deleniti dignissimos facilis, soluta ullam sapiente repellat explicabo cum quasi? Aperiam quia suscipit, iste autem commodi deleniti officiis itaque nam!</div>
-        <div class="own-message">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, consequatur ut. Libero architecto perferendis et veritatis illo quisquam delectus ipsam harum facere id neque animi distinctio, nihil iste totam dignissimos!</div>
-        <div class="sender-message">sdffds</div>
-        <div class="sender-message">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id, dolorem sapiente dolorum repellat corrupti ratione voluptas asperiores. Ipsum impedit, adipisci aliquid distinctio delectus modi earum praesentium ducimus expedita tempora voluptas!</div>
-    </div>    
+    <script src="../Task 2/scripts/script.js"></script>
 </body>
+
 </html>
