--- a/Lection practice 1/Task 1/index.html
+++ b/Lection practice 1/Task 1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Task1</title>
+    <title>Practice 1 Task1</title>
     <link rel="stylesheet" type="text/css" href="../Task 1/styles/styles.css" />
 </head>
 <body>
