--- a/Lection practice 1/Task 2/index.html
+++ b/Lection practice 1/Task 2/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Task 2</title>
+    <title>Practice 1 Task 2</title>
     <link rel="stylesheet" type="text/css" href="../Task 2/styles/styles.css" />
 </head>
 
