--- a/Lection practice 1/Task 2/index.html
+++ b/Lection practice 1/Task 2/index.html
@@ -12,101 +12,7 @@
 <body>
     <div class="main-container">
         <div class="senders-container"></div>
-        <div class="messages-container">
-            <div class="sender-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="sender-message">
-                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
-                <div class="message-text">How are you?</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">I'm ok</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text">And you?</div>
-                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
-            </div>
-            <div class="sender-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="sender-message">
-                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
-                <div class="message-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
-                        aliquid explicabo deleniti? Repudiandae illo earum saepe nostrum odit quasi enim velit nulla,
-                        facere, perspiciatis aut tempora quae necessitatibus quia natus. Lorem ipsum dolor sit amet,
-                        consectetur adipisicing elit. Quos magnam fuga enim corporis, debitis saepe optio? Incidunt
-                        inventore libero placeat, expedita ipsa error odit temporibus eveniet iure, soluta esse velit!</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">I'm ok</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text">And you?</div>
-                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
-            </div>
-            <div class="sender-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="sender-message">
-                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
-                <div class="message-text">How are you?</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">I'm ok</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text">And you?</div>
-                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
-            </div>
-            <div class="sender-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="sender-message">
-                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
-                <div class="message-text">How are you?</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">I'm ok</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text">And you?</div>
-                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
-            </div>
-            <div class="sender-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="sender-message">
-                <div class="message-photo"><img src="../Task 2/images/sender-photo.jpg"></div>
-                <div class="message-text">How are you?</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">Hello!</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text-without-image">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
-                    aliquid explicabo deleniti? Repudiandae illo earum saepe nostrum odit quasi enim velit nulla,
-                    facere, perspiciatis aut tempora quae necessitatibus quia natus. Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit. Quos magnam fuga enim corporis, debitis saepe optio? Incidunt
-                    inventore libero placeat, expedita ipsa error odit temporibus eveniet iure, soluta esse velit!</div>
-            </div>
-            <div class="own-message">
-                <div class="message-text">And you?</div>
-                <div class="message-photo"><img src="../Task 2/images/own-photo.jpg"></div>
-            </div>
-        </div>
+        <div class="messages-container"></div>
     </div>
     <script src="../Task 2/scripts/script.js"></script>
 </body>
