added start message in messages container

--- a/Lection practice 1/Task 2/index.html
+++ b/Lection practice 1/Task 2/index.html
@@ -12,7 +12,9 @@
 <body>
     <div class="main-container">
         <div class="senders-container"></div>
-        <div class="messages-container"></div>
+        <div class="messages-container">
+            <div class="start-message">Please select a chat to start messaging</div>
+        </div>
     </div>
     <script src="../Task 2/scripts/script.js"></script>
 </body>
