--- a/Homework 2/Task 4/index.html
+++ b/Homework 2/Task 4/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" type="text/css" href="../Task 4/styles/styles.css" />
 </head>
 <body>
-    <header>
+    <div class="header">
         <img class="left-picture" src="../Task 4/images/leverx.svg" />
         <img class="right-picture" src="../Task 4/images/leverx.svg" />
-    </header>
+    </div>
     <div id="main-block">
         <table>
             <tbody>
