--- a/Lection practice 2/index.html
+++ b/Lection practice 2/index.html
@@ -10,7 +10,7 @@
 		data-sap-ui-libs="sap.m"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-resourceroots='{
-			"sap.ui.demo.db": "./"
+			"sap.ui.demo.walkthrough": "./"
 		}'
 		data-sap-ui-async="true">
 	</script>
